<resources>
    <string name="app_name">StudentRegistration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="red_id">Red Id</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="done">DONE</string>
    <string name="start_time">Start Time</string>
    <string name="drop">Drop</string>
    <string name="enrolled_class">ENROLLED CLASSES</string>
    <string name="waitlist_class">WAITLISTED CLASSES</string>
    <string name="end_time">End Time</string>
    <string name="register">Register</string>
    <string name="course_available">Courses Available</string>
    <string name="schedule_course">Enrolled Courses</string>
    <string name="search_major">Search Major</string>
    <string name="error_message">Unknown Error Occured</string>
    <string name="title_activity_course_list">CourseList</string>
    <string-array name="level_array">
        <item>all</item>
        <item>lower</item>
        <item>upper</item>
        <item>graduate</item>
    </string-array>
    <string name="title_activity_options">OptionsActivity</string>
</resources>
